==> jpnorair/OpenTag/otplatform/msp430f5/platform_MSP430F5.c <==
#include "OT_platform.h"
#include "OTAPI.h"
#include "veelite_core.h"
#include "mpipe.h"
#include "radio.h"

void platform_ot_preempt() {
/// The kernel scheduler runs normally in co-operative mode, and it is invoked
/// always after a task finishes running.  The kernel scheduler must also run
/// in pre-emptive mode if the chip is asleep (otherwise it will run normally
/// in co-operative mode after the task completes).  In this function, we just
/// check if GPTIM is hot, which means the chip is asleep.  If so, it will
/// invoke sys_event_manager() pre-emptively.
    if (OT_GPTIM->CCTL1 & CCIE) {
        OT_GPTIM->CCTL1 |= (sys_event_manager() == 0) | CCIE;
    }
}

void platform_ot_run() {
/// This function must be run in a while(1) loop from main.

	/// 1. Interrupt Management:
	/// The kernel timer should not cause an interrupt during the runtime of
	/// the kernel task (disable ktim).  Exotask interrupts (interrupts that
	/// are not ktim) must be enabled, though, so exotasks can run.
	platform_disable_ktim();
	platform_enable_interrupts();
    
	/// 2. Program Stack Shenanigans, Part 1:
	/// Save the present address of the program stack.  The task has not been
	/// started yet, so the stack offset should be 0, but we save it anyway
	/// in case of future changes to the system structure by me or you.
#   if (CC_SUPPORT == GCC)
        asm volatile("MOV.W   SP,%0" : "=m"(platform_ext.task_entry)  );     
#   elif (CC_SUPPORT == CL430)  
        platform_ext.task_entry = (ot_u16*)_get_SP_register();
#   endif
    
    /// 3. Invoke the kernel task!
	sys_run_task();

	/// 4. Program Stack Shenanigans, Part 2:
	/// Manually refresh the stack from the saved value.  If the task exited
	/// cleanly, this code basically makes 0 = 0.  If the task was killed, then
	/// it will clobber whatever task data is left on the stack.
#   if (CC_SUPPORT == GCC)
	RETURN_FROM_TASK:
        asm ("MOV.W   %0,SP" : : "m"(platform_ext.task_entry)  );  
#   elif (CC_SUPPORT == CL430)
        asm ("RETURN_FROM_TASK:");
        _set_SP_register((ot_u16)platform_ext.task_entry);
#   endif
	platform_ext.task_entry = NULL;

	/// 5. Run Kernel Scheduler:
	/// Disable interrupts while the scheduler (event manager) runs.  It runs
	/// reasonably fast, probably never more than 1000 cycles (~50us) and
	/// often much less.  If it returns 0, it means there is a task to do right
	/// away.  If it returns non-zero (unsigned), there is a task to do later,
	/// so go to low-power-mode in the meantime.
	platform_disable_interrupts();
	if (sys_event_manager()) {
		sys_powerdown();
	}
}

void platform_init_busclk() {

    /// 1. Board Specific XTAL startup routine
    ///    (Must be defined in Board Support Header)
    BOARD_XTAL_STARTUP();

    /// 2. Select LF clock: it can be REFO or XT1 (XT1 is preferred).  If an
    ///    LF crystal is available, it will be used for XT1.
#   if defined(MCU_PARAM_LFXTALHz)
#       define CLKSRC_32768     sourceXT1
        SELECT_ACLK(ACLKSRC_XT1CLK);
#   else
#       define CLKSRC_32768     sourceREFO
        SELECT_ACLK(ACLKSRC_REFOCLK);
        UCS->CTL6  |= UCS_CTL6_XT1OFF; //Disable LFXT1 after startup
#   endif

    ///3. CONFIGURE FLL - set DCO to multiply the LS/HS clock
    ///   A good area for code optimization is UCS_FLL_settle(), which is
    ///   general purpose and bloated
#   if defined(MCU_PARAM_OSCHz)
        UCS->CTL3 = ((ot_u16)CLKSRC_32768 << 4) | (ot_u16)refdiv1;
#   elif defined(MCU_PARAM_XTALHz)
        UCS->CTL3 = ((ot_u16)sourceXT2 << 4) | (ot_u16)refdiv1;
#   else
#       error "MCLK not bound to XTAL or OSC"
#   endif
    UCS_FLL_settle((PLATFORM_HSCLOCK_HZ/1000), PLATFORM_HSCLOCK_MULT);

    ///4. Configure 32768Hz -> ACLK, DCO -> MCLK, DCO/X -> SMCLK
#   if (PLATFORM_SMCLK_DIV == 1)
#		define _SMCLK_DIV   div1
#   elif (PLATFORM_SMCLK_DIV == 2)
#		define _SMCLK_DIV   div2
#   elif (PLATFORM_SMCLK_DIV == 4)
#		define _SMCLK_DIV   div4
#   elif (PLATFORM_SMCLK_DIV == 8)
#		define _SMCLK_DIV   div8
#   elif (PLATFORM_SMCLK_DIV == 16)
#		define _SMCLK_DIV   div16
#   else
#       error SMCLK divider not supported, must be: 1,2,4,8,16
#   endif

    UCS->CTL4   = (CLKSRC_32768 << clockACLK) | \
    		      (sourceDCO << clockMCLK) | \
    		      (sourceDCO << clockSMCLK);

    UCS->CTL5   = (div1 << clockACLK) | \
		          (div1 << clockMCLK) | \
		          (_SMCLK_DIV << clockSMCLK);
}

void platform_init_gpio() {
/// Initialize ports/pins exclusively used within this platform module.
/// A. Trigger Pins
/// B. Random Number ADC pins: A Zener can be used to generate noise.

    // This must be an inline function in the board header
    BOARD_PORT_STARTUP();  

#if (defined(OT_TRIG1_PORT) && defined(OT_TRIG2_PORT) && (OT_TRIG1_PORTNUM == OT_TRIG2_PORTNUM))
  //OT_TRIG1_PORT->SEL     &= ~(OT_TRIG1_PIN | OT_TRIG2_PIN);
  //OT_TRIG1_PORT->DOUT    &= ~(OT_TRIG1_PIN | OT_TRIG2_PIN);
  //OT_TRIG1_PORT->DDIR    |= (OT_TRIG1_PIN | OT_TRIG2_PIN);
#   if (OT_TRIG1_HIDRIVE || OT_TRIG2_HIDRIVE)
    OT_TRIG1_PORT->DS      |= ((OT_TRIG1_PIN*(OT_TRIG1_HIDRIVE == ENABLED)) | \
                               (OT_TRIG2_PIN*(OT_TRIG2_HIDRIVE == ENABLED)) );
#	endif
#else
#   ifdef OT_TRIG1_PORT
        OT_TRIG1_PORT->DOUT    &= ~OT_TRIG1_PIN;
        OT_TRIG1_PORT->DDIR    |= OT_TRIG1_PIN;
        OT_TRIG1_PORT->DS      |= (OT_TRIG1_PIN*(OT_TRIG1_HIDRIVE == ENABLED));
#   endif
#   ifdef OT_TRIG2_PORT
        OT_TRIG2_PORT->DOUT    &= ~OT_TRIG2_PIN;
        OT_TRIG2_PORT->DDIR    |= OT_TRIG2_PIN;
        OT_TRIG2_PORT->DS      |= (OT_TRIG2_PIN*(OT_TRIG2_HIDRIVE == ENABLED));
#   endif
#endif

#ifdef OT_GWNZENER_PORT
    //OT_GWNZENER_PORT->DOUT &= ~OT_GWNZENER_PIN;
    OT_GWNZENER_PORT->DDIR |= OT_GWNZENER_PIN;
#endif
}

void platform_init_gptim(ot_uint prescaler) {
/// With the MSP430, the timer prescaler input is a code, since the MSP430 core
/// doesn't have a conventional prescaler.  The breakdown is:  <BR>
/// bits 9:8 - Clock select (TASSEL) -  {01 = ACLK, 10 = SMCLK}           <BR>
/// bits 7:6 - Input Divider (ID) -     values {0,1,2,3} yield division by {1,2,4,8}  <BR>
/// bits 2:0 - Input Divider 2 (IDEX) - values b000-b111 yield division by 1 to 8  <BR>
    ot_u16 ctl      = (prescaler & 0x01C0);
    ot_u16 idex     = (prescaler & 0x0007);

    OT_GPTIM->CTL  |= TIMA_FLG_TACLR;   //Clear the timer before changing mode
    OT_GPTIM->CTL   = ctl;
    OT_GPTIM->EX0   = idex;
    //OT_GPTIM->CCR0  = 0;
    //OT_GPTIM->CCTL0 = 0;
    OT_GPTIM->CTL  |= 0x0020;       //continuous-up counting, no update interrupt
}

void platform_init_systick(ot_uint period) {
/// Use the Watchdog Timer in "interval mode" as the SysTick (not required).
///
/// On MSP430 / CC430, the divider can be written as follows
///
/// 0   divide by 2^31 (2G)         typ 18 hrs
/// 1   divide by 2^27 (128M)       typ 68 mins
/// 2   divide by 2^23 (8M)         typ 4:16 mins
/// 3   divide by 2^19 (512K)       typ 16 secs
/// 4   divide by 2^15 (32K)        typ 1 sec
/// 5   divide by 2^13 (8K)         typ 250 ms
/// 6   divide by 2^9  (512)        typ 15.6 ms
/// 7   divide by 2^6  (64)         typ 1.95 ms

    WDTA->CTL = (WDTPW | WDTHOLD | WDTSSEL_1 | WDTTMSEL | WDTCNTCL) | period;

    // Set the Watchdog interval interrupt via Special Function register
    // Comment out if you don't want the SysTick to generate interrupts
    SFRIE1 |= WDTIE;
}

void platform_init_rtc(ot_u32 value) {
#if (OT_FEATURE(RTC) || defined(OT_GPTIM_USERTC))

#   if (BOARD_PARAM_LFHz != 32768)
#       error "Currently, the RTC must use 32768Hz"
#   endif

#   ifdef OT_GPTIM_USERTC
#       error "The MSP430 cannot elegantly support RTC as GPTIM, however, GPTIM can use same ACLK"
#   endif

    /// Set Prescalers for 1 second RTC increments (assuming 32768 Hz), but 
    /// do not activate RTC interrupts (the RTC interrupt is used by the RTC
    /// task scheduler).  When a Task is bound to the scheduler using function
    /// platform_set_rtc_alarm(), the interrupt is activated.  RTC interrupt is
    /// deactivated via platform_clear_rtc_alarms(), called to unbind Tasks.
#   if (RTC_ALARMS > 0)
#       define _1S_INC  (RT1PSDIV_6 | RT1IP_6)
#   else
#       define _1S_INC  (RT1PSDIV_6)
#   endif

    platform_clear_rtc_alarms();

    RTC->CTL01  = 0x0800;       // clear RTC interrupts & flags, RT1PS prescaled clock select
    RTC->CTL23  = 0x0000;       // ignore calibration for now, no clock pin output
    RTC->PS0CTL = RT0PSDIV_7;
    RTC->PS1CTL = RT1SSEL_2 | _1S_INC;

    // Set RTC timer value from input.
    RTC->TIM0   = ((ot_u16*)value)[0];
    RTC->TIM1   = ((ot_u16*)value)[1];

    //platform_enable_rtc();
#endif
}

void platform_enable_rtc() {
    RTC->PS1CTL |= RT1PSIE;
}

ot_u16 platform_crc_block(ot_u8* block_addr, ot_int block_size) {
    ot_u8* data = block_addr;
    CRC->INIRES = 0xFFFF;

    for (; block_size > 0; block_size--) {
        CRCb->DIRB_L = *data++;
    }

    return CRC->INIRES;
}

void platform_memcpy(ot_u8* dest, ot_u8* src, ot_int length) {
#if (OS_FEATURE(MEMCPY) == ENABLED)
    memcpy(dest, src, length);

#elif (MCU_FEATURE(MEMCPYDMA) == ENABLED)
/// DMA driven method: MSP430 DMA Block Transfer is blocking, and the CPU is
/// stopped during the data movement.  Thus the while loop is not needed.
    MEMCPY_DMA->SA_L    = (ot_u16)src;
    MEMCPY_DMA->DA_L    = (ot_u16)dest;
    MEMCPY_DMA->SZ      = length;
    MEMCPY_DMA->CTL     = ( DMA_Mode_Block | \
                            DMA_DestinationInc_Enable | \
                            DMA_SourceInc_Enable | \
                            DMA_DestinationDataSize_Byte | \
                            DMA_SourceDataSize_Byte | \
                            DMA_TriggerLevel_RisingEdge | \
                            0x11);
    //while ((MEMCPY_DMA->CTL & DMAIFG) == 0);
    //DMA must be manually cleared on zero-length copy
    MEMCPY_DMA->CTL    &= ~(0x10);
    
#else
/// Uses the "Duff's Device" for loop unrolling.  If this is incredibly
/// confusing to you, check the internet for "Duff's Device."
    if (length != 0) {
        ot_int loops = (length + 3) >> 2;

        switch (length & 3) {
            case 0: do {    *dest++ = *src++;
            case 3:         *dest++ = *src++;
            case 2:         *dest++ = *src++;
            case 1:         *dest++ = *src++;
                        }
                        while (--loops > 0);
        }
    }

#endif
}
