==> jpnorair/OpenTag/_backport_todo/otplatform/stm32f10x/platform_STM32F10x.c <==
#include "OT_utils.h"
#include "OT_types.h"
#include "OT_config.h"
#include "OT_platform.h"
#include "veelite.h"
#include "veelite_core.h"
#include "buffers.h"
#include "auth.h"
#include "mpipe.h"
#include "radio.h"
#include "system.h"
#include "session.h"
#   define AHBClkDMA1   RCC_AHBPeriph_DMA1
#   define AHBClkDMA1   0
#   define AHBClkDMA2   RCC_AHBPeriph_DMA2
#   define AHBClkDMA2   0
#define AHBClkSRAM          0
#define AHBClkFLITF         0
#define AHBClkCRC           0
#define AHBClkFSMC          0
#define AHBClkSDIO          0
#define AHBClkOTG_FS        0
#define AHBClkETH_MAC       0
#define AHBClkETH_MAC_Tx    0
#define AHBClkETH_MAC_Rx    0
#define AHBClk  (AHBClkDMA1 | AHBClkDMA2 | AHBClkSRAM | AHBClkFLITF | AHBClkCRC | \
                 AHBClkFSMC | AHBClkSDIO | AHBClkOTG_FS |AHBClkETH_MAC | \
                 AHBClkETH_MAC_Tx | AHBClkETH_MAC_Rx)
#   define APB1ClkTIM2   RCC_APB1Periph_TIM2
#   define OT_GPTIM_ISR()   TIM2_IRQHandler(void)
#   define APB1ClkTIM2   0
#   define APB1ClkTIM3   RCC_APB1Periph_TIM3
#   define OT_GPTIM_ISR()   TIM3_IRQHandler(void)
#   define APB1ClkTIM3   0
#   define APB1ClkTIM4   RCC_APB1Periph_TIM4
#   define OT_GPTIM_ISR()   TIM4_IRQHandler(void)
#   define APB1ClkTIM4   0
#   define APB1ClkTIM5   RCC_APB1Periph_TIM5
#   define OT_GPTIM_ISR()   TIM5_IRQHandler(void)
#   define APB1ClkTIM5   0
#   define APB1ClkTIM3   RCC_APB1Periph_TIM6
#   define OT_GPTIM_ISR()   TIM6_IRQHandler(void)
#   define APB1ClkTIM6   0

void platform_ot_preempt() {
/// Assure interrupt is enabled and cause a SW update interrupt
    OT_GPTIM->DIER  = 0;
    OT_GPTIM->ARR   = platform_get_gptim();
    OT_GPTIM->DIER  = TIM_DIER_UIE;
    OT_GPTIM->EGR   = TIM_EGR_UG;
    __NOP();  //No-op to let forced update event (TIM_EGR_UG) stabilize
}

void platform_ot_run() {
/// 1. Save the amount of time that just passed
/// 2. Put the timer into free-running upcounter to time kernel process
/// 3. Run System Kernel, which returns its next scheduled call
/// 4. Put the next scheduled call into the timer, and turn it back on
    ot_u16 next_event;
    ot_u16 elapsed_time;
    elapsed_time    = OT_GPTIM->ARR;
    next_event      = sys_event_manager( elapsed_time );
    
#   if (OT_PARAM(KERNEL_LIMIT) > 0)
        if (next_event > OT_PARAM(KERNEL_LIMIT))
            next_event = OT_PARAM(KERNEL_LIMIT);
#   endif

    platform_set_gptim(next_event);
}

void platform_init_busclk() { 
/// The SystemInit() function from the ST libraries configures the main
/// clocks, and normally it is called in the pre-main function startup
/// routine (startup_stm32f10x_~.s).  I've modified SystemInit() slightly,
/// to take in configuration defines from platform_config_~.h

    //SystemInit();   // called automatically on device startup

#   ifdef __DEBUG__
    // OT_DEBUG_PERIPHERALS is defined in the board_xxx.h file
    DBGMCU_Config(OT_DEBUG_PERIPHERALS, ENABLE);
#   endif
}

void platform_init_gpio() { 
/// The default GPIO is OT Test triggers only, for debugging
#ifdef __DEBUG__
    GPIO_InitTypeDef GPIOinit;
    
    GPIOinit.GPIO_Speed = GPIO_Speed_50MHz;
    GPIOinit.GPIO_Mode  = GPIO_Mode_Out_PP;
	
    GPIOinit.GPIO_Pin   = OT_TRIG1_PIN;
	GPIO_Init(OT_TRIG1_PORT, &GPIOinit);
    
    GPIOinit.GPIO_Pin   = OT_TRIG2_PIN;
	GPIO_Init(OT_TRIG2_PORT, &GPIOinit);
#endif
}

void platform_init_gptim(ot_uint prescaler) {
/// Right now, prescaler input is ignored.
/// GPTIM is put into a normal upcounting mode, but in "one pulse mode" so that
/// the counter is halted after reaching the limit
    OT_GPTIM->CR1   = 0;
    OT_GPTIM->CR2   = 0;
    OT_GPTIM->SMCR  = 0;
    OT_GPTIM->ARR   = 65535;
    OT_GPTIM->PSC   = ((OT_GPTIM_CLOCK/2) / OT_GPTIM_RES);  // Should be always 1024 Hz
    OT_GPTIM->EGR   = TIM_PSCReloadMode_Immediate;     // generate update to lock-in prescaler
    OT_GPTIM->SR    = 0;        // clear update flag
    OT_GPTIM->DIER  = TIM_DIER_UIE;   // Update Interrupt
    OT_GPTIM->CR1  |= TIM_CR1_CEN;    // enable      
}

void platform_init_systick(ot_uint period) {
    if (period <= SysTick_LOAD_RELOAD_Msk) {            //Cancel if period is too large
        SysTick->VAL   = 0;                             //Load the SysTick Counter Value
        SysTick->CTRL  = SysTick_CTRL_CLKSOURCE_Msk | \
                         SysTick_CTRL_TICKINT_Msk   | \
                         SysTick_CTRL_ENABLE_Msk;       //Enable SysTick IRQ and Timer 
    }
}

void platform_init_rtc(ot_u32 value) {
#if (OT_FEATURE(RTC) == ENABLED)
    // Prescaler is fixed to yield 1 Hz
    // Counter is set for input value (don't use 0, it's not 1/1/1990 anyway)
    // Default Alarm is set to 0
#   if (RTC_OVERSAMPLE != 0)
        otrtc.utc   = value;
        value     <<= RTC_OVERSAMPLE;
#   endif

    RTC_EnterConfigMode();
    RTC->PRLH   = 0; //(0 & 0x000F0000) >> 16;
    RTC->PRLL   = (PLATFORM_LSCLOCK_HZ-1) >> RTC_OVERSAMPLE;
    RTC->CNTH   = value >> 16;
    RTC->CNTL   = (value & 0x0000FFFF);
    RTC->ALRH   = 0;
    RTC->ALRL   = 0;
    RTC_ExitConfigMode();

    platform_enable_rtc();
#endif
}

void platform_enable_rtc() {
#if (OT_FEATURE(RTC) == ENABLED)
#   if (RTC_OVERSAMPLE != 0)
        RTC->CRH = RTC_IT_ALR | RTC_IT_SEC;
#   elif (RTC_ALARMS > 0)
        RTC->CRH = RTC_IT_ALR;
#   else
        platform_disable_rtc();
#   endif
#endif
}

ot_u16 platform_crc_block(ot_u8* block_addr, ot_int block_size) {
    ot_u16 crc_val;

    while (block_size > 0) {
        crc_val = (crc_val << 8) ^ crc_table[ ((crc_val >> 8) & 0xff) ^ *block_addr++ ];
        block_size--;
    }
}

void platform_memcpy(ot_u8* dest, ot_u8* src, ot_int length) {
/// Behavior is always blocking.

#if (OS_FEATURE(MEMCPY) == ENABLED)
    memcpy(dest, src, length);

#elif (MCU_CONFIG(MEMCPYDMA) == ENABLED)
    MEMCPY_DMA->IFCR        = MEMCPY_DMA_INT;
    MEMCPY_DMA_CHAN->CPAR   = (ot_u32)dest;
    MEMCPY_DMA_CHAN->CMAR   = (ot_u32)src;
    MEMCPY_DMA_CHAN->CNDTR  = length;
    MEMCPY_DMA_CHAN->CCR    = DMA_DIR_PeripheralDST       | \
                              DMA_Mode_Normal             | \
                              DMA_PeripheralInc_Enable    | \
                              DMA_MemoryInc_Enable        | \
                              DMA_PeripheralDataSize_Byte | \
                              DMA_MemoryDataSize_Byte     | \
                              DMA_Priority_VeryHigh       | \
                              DMA_M2M_Enable              | \
                              DMA_CCR1_EN;
    while((MEMCPY_DMA->ISR & MEMCPY_DMA_INT) == 0);

#else
    /// Uses the "Duff's Device" for loop unrolling.  If this is incredibly 
    /// confusing to you, check the internet for "Duff's Device."
    if (length > 0) {
        ot_int loops = (length + 7) >> 3;
        
        switch (length & 0x7) {
            case 0: do {    *dest++ = *src++;
            case 7:         *dest++ = *src++;
            case 6:         *dest++ = *src++;
            case 5:         *dest++ = *src++;
            case 4:         *dest++ = *src++;
            case 3:         *dest++ = *src++;
            case 2:         *dest++ = *src++;
            case 1:         *dest++ = *src++;
                        } 
                        while (--loops > 0);
        }
    }
    
#endif
}
